fixes another case of overflowing

--- a/style/style.css
+++ b/style/style.css
@@ -636,6 +636,7 @@ td, tr {
 .post-content-side {
     position: relative;
     z-index: -0;
+    word-wrap:break-word;
 }
 
 .post-container * {
